# rust-native-emd

./: Cargo.toml  build.rs
src/: lib.rs
